--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.10.1"
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^7.10.1",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
